--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="image2_description">Cookies</string>
     <string name="image3_description">Cake</string>
     <string name="results_placeholder">(Results will appear here)</string>
+    <string name="default_web_client_id">1040180072882-n3l90eggt91ufsbp0av44t2iq44cuvg5.apps.googleusercontent.com</string>
 </resources>
